feature: getting smells